Cleaner random arena